# Weather-in-Australia

./: .coverage  README.md  Untitled0.ipynb  main.html  main.py  practice_data_sets.html  pyproject.toml
src/: analysis.ipynb  app.py  auth.py  models.py
src/Ctack14_practice_data_sets.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/practice_data_sets/: __init__.py  app.py  loader.py  main.py  predictor.py  stats.py  visualize.py
src/practice_data_sets.egg-info/: PKG-INFO  SOURCES.txt
src/practice_data_sets/data/: a_test_file.csv
src/static/: style.css
src/templates/: dashboard.html  history.html  index.html  login.html  predict.html  prediction_results.html  results.html  upload.html
src/tests/: test_loader.py  test_predictor.py  test_stats.py  test_visuals.py
tests/: test_loader.py  test_stats.py
