[project]
authors = [
  { name = "Caden Atack", email = "cadenthomas4@gmail.com" }
]
name = "Ctack14-practice-data-sets"
version = "0.1.21"
description = "Australian weather data used to learn and practice data analysis skills."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"practice_data_sets" = ["data/*.csv"]

[project.urls]
# Homepage is the same as the repository URL
"Homepage" = "https://github.com/Ctack14/practice-data-sets"

# This is currently empty
# "Issues" = "https://github.com/Ctack14/practice-data-sets/issues"

# Install with `pip install .[dev]` to get the dev dependencies
[tool.uv.dependencies]
dev = [
    "pytest",
    "black",
    "ruff"
]